--- a/compose.yaml
+++ b/compose.yaml
@@ -28,6 +28,7 @@ services:
             - mailpit
             - selenium
     mysql:
+        platform: linux/x86_64
         image: "mysql:8.4"
         ports:
             - "${FORWARD_DB_PORT:-3306}:3306"
